// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OpenAI reasoning e2e test > should be successful with structured_output 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "actualData": {
      "description": "a valid sample date
constraints: a valid date-time",
      "type": "string",
      "x-date": true,
    },
    "arrayMax": {
      "description": "any valid sample array of strings with a maximum of 5 strings
constraints: maximum length 5",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
    "arrayMin": {
      "description": "any valid sample array of strings with a minimum of 1 string
constraints: minimum length 1",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
    "date": {
      "description": "a valid sample date
constraints: a valid date-time",
      "type": "string",
      "x-date": false,
    },
    "dateAfter": {
      "description": "a valid sample date after 2024-01-01
constraints: a valid date-time",
      "type": "string",
      "x-date": false,
    },
    "dateBefore": {
      "description": "a valid sample date before today
constraints: a valid date-time",
      "type": "string",
      "x-date": false,
    },
    "default": {
      "default": "test",
      "description": "sample text that is the default value",
      "type": "string",
    },
    "enum": {
      "description": "The letter A, B, or C",
      "enum": [
        "A",
        "B",
        "C",
      ],
      "type": "string",
    },
    "exampleArray": {
      "description": "any valid array of example strings",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
    "nativeEnum": {
      "description": "The letter A, B, or C",
      "enum": [
        "A",
        "B",
        "C",
      ],
      "type": "string",
    },
    "nullable": {
      "description": "leave this field empty (null value) as an example of a nullable field",
      "type": [
        "string",
        "null",
      ],
    },
    "number": {
      "description": "any valid sample number",
      "type": "number",
    },
    "numberGt": {
      "description": "any valid sample number greater than 3
constraints: greater than 3",
      "type": "number",
    },
    "numberGte": {
      "description": "any valid sample number greater than or equal to 1
constraints: greater than or equal to 1",
      "type": "number",
    },
    "numberInt": {
      "description": "any valid sample number that is an integer",
      "type": "integer",
    },
    "numberLt": {
      "description": "any valid sample number less than 6
constraints: lower than 6",
      "type": "number",
    },
    "numberLte": {
      "description": "any valid sample number less than or equal to 1
constraints: lower than or equal to 1",
      "type": "number",
    },
    "numberMultipleOf": {
      "description": "any valid sample number that is a multiple of 2
constraints: multiple of 2",
      "type": "number",
    },
    "object": {
      "additionalProperties": false,
      "description": "any valid sample object with a string and a number",
      "properties": {
        "bar": {
          "type": "number",
        },
        "foo": {
          "type": "string",
        },
      },
      "required": [
        "foo",
        "bar",
      ],
      "type": "object",
    },
    "objectLoose": {
      "additionalProperties": false,
      "description": "any sample object with example keys and data",
      "properties": {},
      "required": [],
      "type": "object",
    },
    "objectNested": {
      "additionalProperties": false,
      "description": "any valid sample data",
      "properties": {
        "user": {
          "additionalProperties": false,
          "properties": {
            "age": {
              "description": "constraints: greater than or equal to 18",
              "type": "number",
            },
            "name": {
              "description": "constraints: minimum length 2",
              "type": "string",
            },
          },
          "required": [
            "name",
            "age",
          ],
          "type": "object",
        },
      },
      "required": [
        "user",
      ],
      "type": "object",
    },
    "objectPassthrough": {
      "additionalProperties": false,
      "description": "any sample object with example keys and data",
      "properties": {},
      "required": [],
      "type": "object",
    },
    "optional": {
      "anyOf": [
        {
          "description": "leave this field empty (undefined value) as an example of an optional field",
          "type": "string",
        },
        {
          "type": "null",
        },
      ],
      "description": "leave this field empty (undefined value) as an example of an optional field",
    },
    "string": {
      "description": "Sample text",
      "type": "string",
    },
    "stringCuid": {
      "description": "a valid sample cuid",
      "type": "string",
    },
    "stringEmail": {
      "description": "a sample email address
constraints: a valid email",
      "type": "string",
    },
    "stringEmoji": {
      "description": "a valid sample emoji",
      "type": "string",
    },
    "stringMax": {
      "description": "sample text with a maximum of 10 characters
constraints: maximum length 10",
      "type": "string",
    },
    "stringMin": {
      "description": "sample text with a minimum of 5 characters
constraints: minimum length 5",
      "type": "string",
    },
    "stringRegex": {
      "description": "a valid sample string that satisfies the regex
constraints: input must match this regex ^test-",
      "type": "string",
    },
    "stringUrl": {
      "description": "a valid sample url",
      "type": "string",
    },
    "stringUuid": {
      "description": "a valid sample uuid
constraints: a valid uuid",
      "type": "string",
    },
    "unionObjects": {
      "anyOf": [
        {
          "additionalProperties": false,
          "properties": {
            "amount": {
              "type": "number",
            },
            "inventoryItemName": {
              "type": "string",
            },
          },
          "required": [
            "amount",
            "inventoryItemName",
          ],
          "type": "object",
        },
        {
          "additionalProperties": false,
          "properties": {
            "permissions": {
              "items": {
                "type": "string",
              },
              "type": "array",
            },
            "type": {
              "type": "string",
            },
          },
          "required": [
            "type",
            "permissions",
          ],
          "type": "object",
        },
      ],
      "description": "give an valid object",
    },
    "unionPrimitives": {
      "description": "sample text or number",
      "type": [
        "string",
        "number",
      ],
    },
  },
  "required": [
    "string",
    "stringMin",
    "stringMax",
    "stringEmail",
    "stringEmoji",
    "stringUrl",
    "stringUuid",
    "stringCuid",
    "stringRegex",
    "number",
    "numberGt",
    "numberLt",
    "numberGte",
    "numberLte",
    "numberMultipleOf",
    "numberInt",
    "exampleArray",
    "arrayMin",
    "arrayMax",
    "date",
    "dateAfter",
    "dateBefore",
    "actualData",
    "object",
    "objectNested",
    "objectPassthrough",
    "objectLoose",
    "nullable",
    "enum",
    "nativeEnum",
    "unionPrimitives",
    "unionObjects",
    "default",
    "optional",
  ],
  "type": "object",
  "x-optional": [
    "optional",
  ],
}
`;

exports[`OpenAI reasoning e2e test > should be successful with structured_output 2`] = `
{
  "value": {
    "actualData": 2026-09-16T12:00:00.000Z,
    "arrayMax": [
      "a",
      "b",
      "c",
    ],
    "arrayMin": [
      "item",
    ],
    "date": 2026-09-16T12:00:00.000Z,
    "dateAfter": 2024-06-01T00:00:00.000Z,
    "dateBefore": 2026-09-15T23:59:59.000Z,
    "default": "",
    "enum": "A",
    "exampleArray": [
      "one",
      "two",
    ],
    "nativeEnum": "B",
    "nullable": null,
    "number": 42.5,
    "numberGt": 4,
    "numberGte": 1,
    "numberInt": 7,
    "numberLt": 5,
    "numberLte": 1,
    "numberMultipleOf": 4,
    "object": {
      "bar": 123,
      "foo": "foo",
    },
    "objectLoose": {},
    "objectNested": {
      "user": {
        "age": 30,
        "name": "Al",
      },
    },
    "objectPassthrough": {},
    "optional": undefined,
    "string": "Hello",
    "stringCuid": "cjld2cjxh0000qzrmn831i7rn",
    "stringEmail": "user@example.com",
    "stringEmoji": "😀",
    "stringMax": "Short",
    "stringMin": "HELLO",
    "stringRegex": "test-abc",
    "stringUrl": "https://example.com",
    "stringUuid": "123e4567-e89b-12d3-a456-426614174000",
    "unionObjects": {
      "amount": 10,
      "inventoryItemName": "widget",
    },
    "unionPrimitives": "string",
  },
}
`;

exports[`OpenAI reasoning e2e test > should handle tool call with manySchemas input 1`] = `
{
  "value": {
    "actualData": 2022-07-15T08:30:00.000Z,
    "arrayMax": [
      "a",
      "b",
      "c",
    ],
    "arrayMin": [
      "item1",
    ],
    "date": 2023-12-31T23:59:59.000Z,
    "dateAfter": 2024-06-01T12:00:00.000Z,
    "dateBefore": 2026-01-01T00:00:00.000Z,
    "default": "test",
    "enum": "B",
    "exampleArray": [
      "one",
      "two",
      "three",
    ],
    "nativeEnum": "C",
    "nullable": null,
    "number": 42,
    "numberGt": 4,
    "numberGte": 1,
    "numberInt": 7,
    "numberLt": 5,
    "numberLte": 1,
    "numberMultipleOf": 4,
    "object": {
      "bar": 123,
      "foo": "fooVal",
    },
    "objectLoose": {},
    "objectNested": {
      "user": {
        "age": 30,
        "name": "John",
      },
    },
    "objectPassthrough": {},
    "optional": undefined,
    "string": "Hello world",
    "stringCuid": "cjo2cz0kv0000w3uqx2n3l7yk",
    "stringEmail": "user@example.com",
    "stringEmoji": "😊",
    "stringMax": "ShortText",
    "stringMin": "Hello",
    "stringRegex": "test-abc",
    "stringUrl": "https://example.com",
    "stringUuid": "550e8400-e29b-41d4-a716-446655440000",
    "unionObjects": {
      "permissions": [
        "read",
        "write",
      ],
      "type": "admin",
    },
    "unionPrimitives": "union",
  },
}
`;

exports[`OpenAI reasoning e2e test > should handle tool call with manySchemas input and output 1`] = `
"Here is the validated output from the manySchemasTool:

{"string":"Example string","stringMin":"Hello","stringMax":"ShortTxt","stringEmail":"user@example.com","stringEmoji":"😊","stringUrl":"https://example.com","stringUuid":"123e4567-e89b-12d3-a456-426614174000","stringCuid":"ckl4wz9k10000jqeq1r4k0al0","stringRegex":"test-value","number":42,"numberGt":4,"numberLt":5,"numberGte":1,"numberLte":1,"numberMultipleOf":10,"numberInt":7,"exampleArray":["a","b","c"],"arrayMin":["only"],"arrayMax":["one","two","three","four","five"],"date":"2025-12-31T23:59:59.000Z","dateAfter":"2024-02-01T12:00:00.000Z","dateBefore":"2026-01-01T00:00:00.000Z","actualData":"2023-07-21T15:30:00.000Z","object":{"foo":"bar","bar":123},"objectNested":{"user":{"name":"Al","age":30}},"objectPassthrough":{},"objectLoose":{},"nullable":null,"enum":"A","nativeEnum":"B","unionPrimitives":"union string","unionObjects":{"amount":5,"inventoryItemName":"Widget"},"default":"test"}"
`;
